# data_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
fga_app/: Home.py  teste_tendencia.py
fga_app/pages/: Mercado.py
fga_app/src/config/: pages_config.py  trending_functions.py
fga_app/src/connection/: database.py
fga_app/src/querys/: querys_dictionary.py  queys_dictionary.py
